feat: added configurations of entity framework

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "PostGreSql": "User ID=postgres;Password=Pa$$w0rd;Host=localhost;Port=5432;Database=AssetManagement;Pooling=true;"
+  },
+  
   "Logging": {
     "LogLevel": {
       "Default": "Information",
